<resources>
    <string name="app_name">Payroll</string>
    <string name="Company">Company Code</string>
    <string name="Device">Device Name</string>
    <string name="UserCode">User Code</string>
    <string name="UserPass">Password</string>
    <string name="Submit">SUBMIT</string>
    <string name="AlreadyRegistered">Already registered?</string>
    <string name="ClickHere">Click Here!</string>
    <string name="HRBUDDYLOGO">LOGO</string>
    <string name="loadingtext">Your payroll companion</string>
    <string name="loginusercode">User Code</string>
    <string name="loginbutton">LOGIN</string>
    <string name="registeredtv">Not yet registered?</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="lastlogin">Last Login:</string>
    <string name="lastloc">Last Location:</string>
    <string name="logsIN">IN</string>
    <string name="logsOUT">OUT</string>
    <string name="logsLastLogin">Last Login:</string>
    <string name="userlogsLastLoc">Last Location:</string>
    <string name="A" />
    <string name="permission_denied_contacts">PERMISSION DENIED</string>
    <string name="SYNC">sync</string>
    <string name="navSettings">Settings</string>
    <string name="navLogs">Logs</string>
    <string name="navSync">Sync</string>
    <string name="navAbout">About</string>
    <string name="navFillings">Fillings</string>
    <string name="navLogout">Logout</string>
    <string name="navLogsFilling">Fillings</string>
    <string name="navLogsUserLogs">Logs</string>
    <string name="devinfo">Devgeekph © 2021</string>
    <string name="hrbuddy">HR Buddy</string>
    <string name="rights">All Rights Reserve.</string>
    <string name="forgotpass">Forgot password</string>
    <string name="setupsecq">Setup Security Question</string>
    <string name="selectsecq">Select security question:</string>
    <string name="secqans">Answer:</string>
    <string name="foruser">User:&#160;</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="Cleardb">Clear Database</string>
    <string name="cleardesc">Clear logs, reset settings</string>
    <string name="profile">Profile</string>
    <string name="profiledesc">Password reset, security verification setup</string>
    <string name="logs">Logs</string>
    <string name="logsdesc">Time logs, Absents, Leaves</string>
    <string name="settingsProfile">PROFILE</string>
    <string name="settingsClear">CLEAR</string>
    <string name="settingsLogs">LOGS</string>
    <string name="SAVE">SAVE</string>
    <string name="SETUPVERIFICATION">SETUP VERIFICATION</string>
    <string name="SETUPPASS">SETUP PASSWORD</string>
    <string name="currentpass">Current Password</string>
    <string name="ABOUT">About</string>
    <string name="aboutDesc">Developers information</string>
    <string name="selectcat">Select Category:</string>
    <string name="fromdate">Select Date From:</string>
    <string name="dateto">Select Date To:</string>
    <string name="select">SELECT</string>
    <string name="reason">Reason:</string>
    <string name="remarks">Remarks:</string>

</resources>