<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/navSettings"/>
    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/logs"
        android:title="@string/navLogs"/>

    <item
        android:id="@+id/navigation_sync"
        android:icon="@drawable/sync"
        android:title="@string/navSync"/>
    <item
        android:id="@+id/navigation_filling"
        android:icon="@drawable/fillings"
        android:title="@string/navFillings"/>
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/logout"
        android:title="@string/navLogout"/>
</menu>