<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141414"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/im_main_logo"

        android:layout_width="201dp"
        android:layout_height="138dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/HRBUDDYLOGO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hrbuddy" />

    <TextView
        android:id="@+id/tv_main_alrdyrgs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/AlreadyRegistered"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_submit" />

    <TextView
        android:id="@+id/tv_main_clickherereg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="8dp"
        android:text="@string/ClickHere"
        android:textColor="@color/textlink"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_alrdyrgs"
        app:layout_constraintStart_toStartOf="@+id/tv_main_alrdyrgs"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_submit" />

    <EditText
        android:id="@+id/et_main_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Company"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_main_logo" />

    <EditText
        android:id="@+id/et_main_device"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/Device"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_main_company" />

    <EditText
        android:id="@+id/et_main_usercode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/UserCode"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_main_device" />

    <EditText
        android:id="@+id/et_main_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/UserPass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_main_usercode" />

    <Button
        android:id="@+id/btn_main_submit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:background="@color/greenish"
        android:text="@string/Submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_main_zones" />

    <Spinner

        android:id="@+id/spinner_main_zones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_main_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>