<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish">

    <ImageView
        android:id="@+id/im_about"
        android:layout_width="223dp"
        android:layout_height="148dp"
        android:layout_marginStart="50dp"

        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/HRBUDDYLOGO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hrbuddy" />

    <TextView
        android:textColor="@color/grayish"
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/devinfo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_about" />

    <TextView
        android:textColor="@color/grayish"
        android:id="@+id/textView6"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/rights"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>