<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_security_answer">

        <Button
            android:id="@+id/btn_fpass_save"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1.0"
            android:background="@color/greenish"
            android:text="@string/Submit"
            android:textColor="@color/white" />

        <Button

            android:id="@+id/btn_fpass_cancel"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.0"
            android:background="#EE4444"
            android:text="@android:string/cancel"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Spinner
        android:id="@+id/sp_security_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:dropDownWidth="wrap_content"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/setupsecq"
        android:textColor="@color/grayish"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/selectsecq"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_security_foruser" />

    <TextView
        android:id="@+id/tv_security_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:labelFor="@id/tv_security_answer"
        android:text="@string/secqans"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_security_question" />

    <EditText
        android:id="@+id/et_security_answer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:labelFor="@id/tv_security_answer"
        android:textColor="@color/white"
        android:textColorHint="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_security_answer" />

    <TextView
        android:id="@+id/tv_security_foruser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/foruser"
        android:textColor="@color/grayish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>